force-app/main/default/objects/amc__Billing__c/amc__Billing__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains Information Related to Billing.  Primarily Invoice Information</description>
    <label>Billing</label>
</CustomObject>