force-app/main/default/objects/amc__Billing__c/fields/amc__Invoice_Footer_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Footer_Notes__c</fullName>
    <inlineHelpText>Information entered here appears at the bottom of your Invoice/Credit Note.</inlineHelpText>
    <label>Invoice Footer Notes</label>
    <type>TextArea</type>
</CustomField>