force-app/main/default/objects/amc__Billing__c/fields/amc__Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Invoice_Name__c</fullName>
    <inlineHelpText>The Header of the Invoice Template e.g. TAX INVOICE</inlineHelpText>
    <label>Invoice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>