force-app/main/default/objects/amc__Billing__c/fields/amc__Remove_Logo__c.field-meta.xml
<CustomField>
    <fullName>amc__Remove_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Removes the Mission Control Logo from the Bottom of the Invoice/Credit Note</inlineHelpText>
    <label>Remove Logo</label>
    <type>Checkbox</type>
</CustomField>